--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="title_hint">Title</string>
     <string name="description_hint">Description</string>
     <string name="save">Save</string>
+    <string name="bold">Bold</string>
+    <string name="color">Color</string>
 </resources>
