Create shop list name adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="new_list">New list name</string>
     <string name="list_name">List name</string>
     <string name="create_list">Create list</string>
+    <string name="empty">Empty</string>
 </resources>
