--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="list_name">List name</string>
     <string name="create_list">Create list</string>
     <string name="empty">Empty</string>
+    <string name="delete_item">Do you want delete this item?</string>
+    <string name="delete_alert">Delete</string>
+    <string name="cancel">Cancel</string>
 </resources>
