edit action layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="notes">Notes</string>
     <string name="shop_list">Shop list</string>
     <string name="new_item">New</string>
+    <string name="new_">New Item</string>
     <string name="title_hint">Title</string>
     <string name="description_hint">Description</string>
     <string name="save">Save</string>
@@ -17,4 +18,8 @@
     <string name="delete_alert">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="update">Update</string>
+    <string name="delete_list">Delete list</string>
+    <string name="clear_list">Clear list</string>
+    <string name="share_list">Share list</string>
+    <string name="save_item">Save item</string>
 </resources>
